--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="calc-wrapper">
 		<div class="wrapper-headr">
-            <h4 class="wrapper-headr_h4">calc</h4>
+            <h4 class="wrapper-headr_h4">CALC</h4>
             <div class="button-flex">
-                <p class="button-flex_p">THEME</p>
+                <p class="button-flex_p">theme</p>
                 
                 <div class="toggle-wrapper">
                     <div class="numbers">
